Fix 'When opening a saved file, class positions are wrong'.

The bug, which exists in Qt4 and 5, happens on saving xmi
files using a locale dependent decimal point and is caused
by a different implementation of void
QDomElement::setAttribute(const QString& name, double value)
not using the 'C' locale for converting floating point values
to string as the other number related methods does.

Therefore the bug fix is to use QString::number(), which uses
the 'C' locale.

Add related unit test.

BUG:357373
FIXED-IN:2.18.2 (KDE Applications 15.12.2)